# hacker-league

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alertmanager.yml  coding-admin.sh  docker-compose.yml  env.sample  openrouter_config.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  start.sh
demos/: README.md  doc_demo.sh  echo_agent.py  genomic_demo.sh  kb_demo.sh  laser_trading_agent.py  mirror_trade_agent.py  news_agent.py  stock_agent.py  test_base_agent.py  weather_agent.py
e2b-agent/: auth_implementation.md  cli_args.md  e2b-agent-runtime.md  implementation.md  readme.md  roadmap.md  summary.md  test_api.py  test_execution.md  test_plan.md  test_sdk.py
scripts/: api-test.js  api-test.sh  bio_analyzer.py  bio_analyzer_react.py  bioinformatics_agent.py  copilot-test.js  genomic_data_agent.py  genomic_harmonizer.py  genomic_harmonizer_react.py  kb_curator.py  kb_curator_react.py  medical_knowledge_agent.py  react_agent_template.py  vs-code.sh
src/: .gitignore
src/beverages/: __init__.py  cli.sh  crew.py  main.py
src/hello_world/: cli.sh  crew.py  main.py
stock-mirror-spec/: readme.md
tests/: conftest.py  test_analysis_agent.py  test_auth.py  test_cli.py  test_code_agent.py  test_comms_agent.py  test_config.py  test_crew.py  test_data_agent.py  test_employee_agent.py  test_main.py  test_react_flow.py  test_reporting_agent.py  test_sandbox.py  test_template.py  test_trading_agent.py  test_user_prompt.py
(+111 files in other folders)
